feat: custom livraison etiquette

--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -331,7 +331,8 @@
     "fabrication": "Include the impact of manufacturing the object",
     "car": "I'm going by car",
     "foot": "I'm going on foot",
-    "etiquette": "What is the <important>carbon impact</important> of different purchasing methods? (1kg package)",
+    "etiquette": "What is the <important>carbon impact</important> of different purchasing methods? ({value}kg package)",
+    "greyEtiquette": "What is the <important>carbon impact</important> of different purchasing methods? ({value}kg package)",
     "magasin": "Purchase in store",
     "livraisondomicile": "Home delivery",
     "pointrelais": "Delivery to a relay point",
@@ -458,6 +459,27 @@
         "clickcollect": "For a 1 kg package, car travel.",
         "clickcollectdouce": "For a 1 kg package, walking.",
         "livraisondomicile": "For a 1 kg package.",
+        "magasin2kg": "For a 2kg package, car travel.",
+        "magasindouce2kg": "For a 2kg package, walking.",
+        "pointrelais2kg": "For a 2kg package, car travel.",
+        "pointrelaisdouce2kg": "For a 2kg package, walking.",
+        "clickcollect2kg": "For a 2kg package, car travel.",
+        "clickcollectdouce2kg": "For a 2kg package, walking.",
+        "livraisondomicile2kg": "For a 2kg package.",
+        "magasin15kg": "For a 15kg package, car travel.",
+        "magasindouce15kg": "For a 15kg package, walking.",
+        "pointrelais15kg": "For a 15kg package, car travel.",
+        "pointrelaisdouce15kg": "For a 15kg package, walking.",
+        "clickcollect15kg": "For a 15kg package, car travel.",
+        "clickcollectdouce15kg": "For a 15kg package, walking.",
+        "livraisondomicile15kg": "For a 15kg package.",
+        "magasin30kg": "For a 30kg package, car travel.",
+        "magasindouce30kg": "For a 30kg package, walking.",
+        "pointrelais30kg": "For a 30kg package, car travel.",
+        "pointrelaisdouce30kg": "For a 30kg package, walking.",
+        "clickcollect30kg": "For a 30kg package, car travel.",
+        "clickcollectdouce30kg": "For a 30kg package, walking.",
+        "livraisondomicile30kg": "For a 30kg package.",
         "voiturefrancaisejour": "Average annual emissions of private thermal cars from 2013 to 2024 (70.7 Mt CO2 e) reported per day.",
         "voiturefrancaisean": "Average emissions of private cars in circulation from 2013 to 2024.",
         "populationfrancaise": "Estimation of greenhouse gases associated with the average lifestyle of the French population, whose carbon footprint is estimated at 9.1 T CO2 e. The French population is estimated at 68,606,000 inhabitants in 2025.",
