--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -331,7 +331,8 @@
     "fabrication": "Incluir el impacto de la fabricación del objeto",
     "car": "voy allí en coche",
     "foot": "voy a pie",
-    "etiquette": "¿Cuál es el <important>impacto de carbono</important> de los diferentes métodos de compra? (paquete de 1kg)",
+    "etiquette": "¿Cuál es el <important>impacto de carbono</important> de los diferentes métodos de compra? (paquete de {value}kg)",
+    "greyEtiquette": "¿Cuál es el <important>impacto de carbono</important> de los diferentes métodos de entrega? (paquete de {value}kg)",
     "magasin": "Compra en tienda",
     "livraisondomicile": "Entrega a domicilio",
     "pointrelais": "Entrega al punto de relevo",
@@ -458,6 +459,27 @@
         "clickcollect": "Para un paquete de un kilo, viajes en coche.",
         "clickcollectdouce": "Para un paquete de un kilo, caminando.",
         "livraisondomicile": "Para un paquete de un kilo.",
+        "magasin2kg": "Para un paquete de 2kg, viajes en coche.",
+        "magasindouce2kg": "Para un paquete de 2kg, caminando.",
+        "pointrelais2kg": "Para un paquete de 2kg, viajes en coche.",
+        "pointrelaisdouce2kg": "Para un paquete de 2kg, caminando.",
+        "clickcollect2kg": "Para un paquete de 2kg, viajes en coche.",
+        "clickcollectdouce2kg": "Para un paquete de 2kg, caminando.",
+        "livraisondomicile2kg": "Para un paquete de 2kg.",
+        "magasin15kg": "Para un paquete de 15kg, viajes en coche.",
+        "magasindouce15kg": "Para un paquete de 15kg, caminando.",
+        "pointrelais15kg": "Para un paquete de 15kg, viajes en coche.",
+        "pointrelaisdouce15kg": "Para un paquete de 15kg, caminando.",
+        "clickcollect15kg": "Para un paquete de 15kg, viajes en coche.",
+        "clickcollectdouce15kg": "Para un paquete de 15kg, caminando.",
+        "livraisondomicile15kg": "Para un paquete de 15kg.",
+        "magasin30kg": "Para un paquete de 30kg, viajes en coche.",
+        "magasindouce30kg": "Para un paquete de 30kg, caminando.",
+        "pointrelais30kg": "Para un paquete de 30kg, viajes en coche.",
+        "pointrelaisdouce30kg": "Para un paquete de 30kg, caminando.",
+        "clickcollect30kg": "Para un paquete de 30kg, viajes en coche.",
+        "clickcollectdouce30kg": "Para un paquete de 30kg, caminando.",
+        "livraisondomicile30kg": "Para un paquete de 30kg.",
         "voiturefrancaisejour": "Promedio de emisiones anuales de automóviles particulares térmicos de 2013 a 2024 (70,7 Mt CO2 e) reportado por día.",
         "voiturefrancaisean": "Promedio de emisiones de automóviles particulares en circulación de 2013 a 2024.",
         "populationfrancaise": "Estimación de gases de efecto invernadero asociados al estilo de vida promedio de la población francesa, cuya huella de carbono se estima en 9,1 T CO2 e. La población francesa se estima en 68.606.000 habitantes en 2025.",
