--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -331,7 +331,8 @@
     "fabrication": "Inclure l’impact de la fabrication de l’objet",
     "car": "J'y vais en voiture",
     "foot": "J'y vais à pied",
-    "etiquette": "Quel est <important>l'impact carbone</important> des différents modes d'achat ? (colis d'1kg)",
+    "etiquette": "Quel est <important>l'impact carbone</important> des différents modes d'achat ? (colis {count, plural, =1 {d''} other {de }}{value}kg)",
+    "greyEtiquette": "Quel est <important>l'impact carbone</important> des différents modes de livraison ? (colis {count, plural, =1 {d''} other {de }}{value}kg)",
     "magasin": "Achat en magasin",
     "livraisondomicile": "Livraison à domicile",
     "pointrelais": "Livraison en point de retrait",
@@ -458,6 +459,27 @@
         "clickcollect": "Pour un colis d'un kilo et un déplacement en voiture.",
         "clickcollectdouce": "Pour un colis d'un kilo et un déplacement à pied.",
         "livraisondomicile": "Pour un colis d'un kilo.",
+        "magasin2kg": "Pour un colis de 2kg et un déplacement en voiture.",
+        "magasindouce2kg": "Pour un colis de 2kg et un déplacement à pied.",
+        "pointrelais2kg": "Pour un colis de 2kg et un déplacement en voiture.",
+        "pointrelaisdouce2kg": "Pour un colis de 2kg et un déplacement à pied.",
+        "clickcollect2kg": "Pour un colis de 2kg et un déplacement en voiture.",
+        "clickcollectdouce2kg": "Pour un colis de 2kg et un déplacement à pied.",
+        "livraisondomicile2kg": "Pour un colis de 2kg.",
+        "magasin15kg": "Pour un colis de 15kg et un déplacement en voiture.",
+        "magasindouce15kg": "Pour un colis de 15kg et un déplacement à pied.",
+        "pointrelais15kg": "Pour un colis de 15kg et un déplacement en voiture.",
+        "pointrelaisdouce15kg": "Pour un colis de 15kg et un déplacement à pied.",
+        "clickcollect15kg": "Pour un colis de 15kg et un déplacement en voiture.",
+        "clickcollectdouce15kg": "Pour un colis de 15kg et un déplacement à pied.",
+        "livraisondomicile15kg": "Pour un colis de 15kg.",
+        "magasin30kg": "Pour un colis de 30kg et un déplacement en voiture.",
+        "magasindouce30kg": "Pour un colis de 30kg et un déplacement à pied.",
+        "pointrelais30kg": "Pour un colis de 30kg et un déplacement en voiture.",
+        "pointrelaisdouce30kg": "Pour un colis de 30kg et un déplacement à pied.",
+        "clickcollect30kg": "Pour un colis de 30kg et un déplacement en voiture.",
+        "clickcollectdouce30kg": "Pour un colis de 30kg et un déplacement à pied.",
+        "livraisondomicile30kg": "Pour un colis de 30kg.",
         "voiturefrancaisejour": "Moyenne des émissions annuelles des voitures particulières thermiques de 2013 à 2024 (70,7 Mt CO2 e) rapportée à la journée.",
         "voiturefrancaisean": "Moyenne des émissions annuelles des voitures particulières thermiques de 2013 à 2024.",
         "populationfrancaise": "Estimation des gaz à effet de serre associés au mode de vie moyen de la population française, dont l’empreinte carbone est estimée à 9,1 T CO2 e. La population française est estimée à 68 606 000 habitants en 2025.",
