--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -88,7 +88,7 @@
     "next-actions": "Aller plus loin",
     "comparison": "Changer le mode de transport comparé",
     "understand": "Comprendre les données",
-    "faq": "Foire aux questions",
+    "faq": "Questions fréquentes",
     "download": "Télécharger",
     "alimentationCategoryIntegrate": {
       "title": "Liste à afficher par défaut",
