--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -3,41 +3,60 @@
     "loading": "Cargando...",
     "notFound": "¿No encuentras una respuesta a tus preguntas?",
     "contact": "Contáctanos",
-    "allFAQs": "Todas las preguntas"
+    "allFAQs": "Todas las preguntas",
+    "search": "Buscar un tema, una pregunta...",
+    "exemple": "Por ejemplo:",
+    "Transport": {
+      "exemple-1": "construcción",
+      "exemple-2": "índice de ocupación",
+      "exemple-3": "avión",
+      "exemple-4": "coche térmico"
+    },
+    "Chauffage": {
+      "exemple-1": "temperatura",
+      "exemple-2": "consumo de energía",
+      "exemple-3": "facturas",
+      "exemple-4": "caldera de leña"
+    },
+    "or": "o",
+    "noResult": "Ningún resultado para",
+    "clear": "Borrar búsqueda",
+    "noResultExplanation": "Lo sentimos, no hemos encontrado ningún resultado que coincida con los términos de su búsqueda.",
+    "noResultAdditionalInfo": "Intentamos proporcionar respuestas a las preguntas más frecuentes, pero es posible que no hayamos considerado todos los casos posibles. Si cree que su pregunta también puede ayudar a otros usuarios en su proceso, no dude en <contact>contactarnos</contact> para hacérnoslo saber."
   },
   "quiz": {
-    "infography": "REVIEW SIZE ORDERS",
-    "hideAll": "Hide the list of magnitudes",
-    "displayAll": "Show all magnitudes",
-    "question": "Question",
-    "previous": "Prev.",
-    "title": "According to you, what has <important>less</important> impact on the climate?",
-    "tag": "Choose your answer below:",
-    "ou": "or",
-    "correct": "<important>Well done!</important> That's exactly right!",
-    "missed": "<important>You missed...</important> The correct answer was",
-    "more": "Read more",
-    "less": "Reduce",
-    "next": "Next question",
-    "result": "See score",
-    "finished": "It's over!",
-    "score": "You got <important>{score} / 10</important> {score, plural, =1 {correct answer} other {correct answers}}!",
-    "restart": "Restart",
-    "read-more": "LEARN MORE",
+    "infography": "REVISA LOS ÓRDENES DE MAGNITUD",
+    "hideAll": "Ocultar la lista de magnitudes",
+    "displayAll": "Mostrar todas las magnitudes",
+    "question": "Pregunta",
+    "previous": "Ant.",
+    "title": "Según tú, ¿qué tiene <important>menos</important> impacto en el clima?",
+    "tag": "Elige tu respuesta a continuación:",
+    "ou": "o",
+    "correct": "<important>¡Bien hecho!</important> ¡Es exacto!",
+    "missed": "<important>Te equivocaste...</important> La respuesta correcta era",
+    "more": "Leer más",
+    "less": "Reducir",
+    "next": "Siguiente pregunta",
+    "result": "Ver puntuación",
+    "finished": "¡Se acabó!",
+    "score": "Has obtenido <important>{score} / 10</important> {score, plural, =1 {respuesta correcta} other {respuestas correctas}}!",
+    "restart": "Reiniciar",
+    "read-more": "APRENDE MÁS",
     "boeuf-tgv": {
-      "line-1": "For long distances, the TGV emits much less greenhouse gases than gasoline cars or planes. Per person and per kilometer, <important>trains pollute 8 times less than cars and 14 times less than planes.</important>",
-      "line-2": "Beef consumption has a significant impact on the climate. In fact, the greenhouse gas emissions of a meal with beef are equivalent to those of 14 vegetarian meals."
+      "line-1": "Para largas distancias, el TGV emite muchos menos gases de efecto invernadero que los coches de gasolina o los aviones. Por persona y por kilómetro, <important>los trenes contaminan 8 veces menos que los coches y 14 veces menos que los aviones.</important>",
+      "line-2": "El consumo de carne de res tiene un impacto importante en el clima. De hecho, las emisiones de gases de efecto invernadero de una comida con carne de res equivalen a las de 14 comidas vegetarianas."
     },
     "tablette-chaussures": {
-      "line-1": "The life cycle of a tablet (from its manufacture to its end of life) generates <important>4 times more impact</important> than that of a pair of leather shoes.",
-      "line-2": "It is the manufacturing stage of digital devices in general that weighs the most in their carbon footprint, much more than their use. Therefore, <important>it is important to keep the tablet as long as possible.</important>"
+      "line-1": "El ciclo de vida de una tableta (desde su fabricación hasta su fin de vida) genera <important>4 veces más impacto</important> que el de un par de zapatos de cuero.",
+      "line-2": "La etapa de fabricación de los dispositivos digitales en general es la que más pesa en su huella de carbono, mucho más que su uso. Por lo tanto, <important>es importante conservar la tableta el mayor tiempo posible.</important>"
     },
     "avocat-poisson": {
-      "line-1": "Today, the avocado is often criticized for its significant environmental impact. Avocados are not produced in France; they are grown in distant countries and require a lot of water to grow.",
-      "line-2": "However, the carbon footprint of 1 kg of avocado is slightly lower than that of a meal with white fish."
+      "line-1": "Hoy en día, el aguacate suele ser criticado por su importante impacto ambiental. Los aguacates no se producen en Francia; se cultivan en países lejanos y requieren mucha agua para crecer.",
+      "line-2": "Sin embargo, la huella de carbono de 1 kg de aguacate es ligeramente inferior a la de una comida con pescado blanco."
     },
     "refrigirateur-ordinateur": {
-      "line-1": "Household appliances also have a strong impact on the climate. Like digital devices, the manufacturing stage is the most significant part of their carbon footprint."
+      "line-1": "Los electrodomésticos también tienen un fuerte impacto en el clima. Al igual que los dispositivos digitales, la etapa de fabricación es la parte más significativa de su huella de carbono."
     },
     "eau-the": {
       "line-1": "Beber un litro de agua embotellada tiene <important>6 veces más impacto</important> que beber un litro de té. ¿Por qué? Porque la producción del embalaje de plástico de la botella y su distribución a los diferentes puntos de venta aumentan significativamente su huella de carbono."
@@ -227,7 +246,7 @@
     "avoided": "evitados",
     "itineraire": {
       "roundTrip": "Ida y vuelta",
-      "header": "Descubre la cantidad de CO₂e que emites para este trayecto",
+      "header": "Calcular el impacto de carbono de su viaje en <co2e>CO₂e</co2e> y <parpersonne>por persona</parpersonne>",
       "start": "Salida",
       "end": "Llegada",
       "empty": "Por ejemplo, la cantidad de kg CO2e emitidos en un viaje de 100 km es..."
@@ -251,7 +270,7 @@
       "total": "ES DECIR TANTAS EMISIONES COMO..."
     },
     "distance": {
-      "header": "Descubre la cantidad de CO₂e que emites para esta distancia"
+      "header": "Calcular el impacto de carbono de su viaje en <co2e>CO₂e</co2e> y <parpersonne>por persona</parpersonne>"
     },
     "mode-selector": {
       "distance": "Distancia",
@@ -281,7 +300,8 @@
       "usage": "Uso",
       "logistique": "Logística / Entrega",
       "deplacement": "Mi movimiento",
-      "fabrication": "fabricación"
+      "fabrication": "fabricación",
+      "faq": "¿A qué equivale esto?"
     },
     "vetement": {
       "display": "Ver todas las prendas",
@@ -303,7 +323,7 @@
     "detail": " Ver el detalle",
     "number-of": "Número de",
     "co2-unit": "kg de CO₂",
-    "unit-title": "Suprima el filtro {equivalent} y revenir al comparador",
+    "unit-title": "Elimina el filtro {equivalent} y vuelve al comparador",
     "generate": "Generar otros equivalentes",
     "modify": "Modificar mis equivalentes",
     "add": "Añadir un equivalente",
@@ -605,7 +625,7 @@
     "repas": "comida",
     "litre": "litro",
     "épisode": "episodio",
-    "intégrale": "completo",
+    "intégrale": "integral",
     "param": "con los parámetros indicados a continuación",
     "email": "correo",
     "recherche": "búsqueda",
@@ -623,8 +643,6 @@
     "agir-livraison": "Infórmate para consumir de otra manera",
     "epargnonsnosressources": "Evalúa tu necesidad real antes de comprar",
     "gagner-place": "¿Ganar espacio en casa?",
-    "deplacements": "Infórmate para desplazarte de otra manera",
-    "vacances": "Infórmate para unas vacaciones más responsables",
     "alimentation-responsable": "Infórmate para una alimentación más responsable",
     "gestes": "Infórmate sobre los gestos cotidianos",
     "mode": "Infórmate sobre la moda responsable",
