--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -643,6 +643,7 @@
   },
   "alimentation": {
     "title": "Descubrir <important>el impacto de carbono por 1 kg de alimentos.</important> presentados por...",
+    "customTitle": "Descubrir <important>el impacto de carbono por 1 kg de alimentos.</important>",
     "label": "Seleccionar cómo agrupar los resultados",
     "group": "Grupo de alimentos (carnes, pescados, productos lácteos...)",
     "rayon": "Secciones de la tienda (comestibles salados, panadería, charcutería...)",
