fix: update transport faq suggestion

--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -10,7 +10,7 @@
       "exemple-1": "construction",
       "exemple-2": "occupancy rate",
       "exemple-3": "plane",
-      "exemple-4": "combustion engine vehicle"
+      "exemple-4": "vehicle"
     },
     "Chauffage": {
       "exemple-1": "temperature",
