--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -10,7 +10,7 @@
       "exemple-1": "construcción",
       "exemple-2": "índice de ocupación",
       "exemple-3": "avión",
-      "exemple-4": "coche térmico"
+      "exemple-4": "coche"
     },
     "Chauffage": {
       "exemple-1": "temperatura",
