--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -10,7 +10,7 @@
       "exemple-1": "construction",
       "exemple-2": "taux de remplissage",
       "exemple-3": "avion",
-      "exemple-4": "voiture thermique"
+      "exemple-4": "voiture"
     },
     "Chauffage": {
       "exemple-1": "température",
